fix spacing on flex-container2 and footer

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 .logo{
     height: 4em;
     border-radius: .5em;
-    box-shadow: 0 0 10px black;
+    box-shadow: 8px 8px 20px 2px black;
     width: 15em;
     margin-left: 10px;
   }
@@ -196,7 +196,6 @@ margin-top: 50px;
 
 h2{
     text-align: center;
-    margin-top:50px;
 }
 
 
@@ -218,13 +217,18 @@ footer{
   background-color: rgb(21, 121, 51);
   text-align: Center;
   margin-top: 100px;
-  padding-top: 50px;
   padding-bottom: 25px;
+  padding-top:20px;
   display:flex;
-  flex-direction: column;
+  justify-content: space-between;
+  flex-direction: row;
   flex: 1 0 0%;
 }
 
+#copyright{
+  padding-top: 4em;
+  padding-left: 2em;
+}
 .email{
   color: black;
 }
@@ -399,9 +403,10 @@ h3{
   
   .flex-container2{
  display: flex;
- flex-direction:row;
+ flex-direction: row;
  flex-wrap: wrap;
- flex-basis: 33.333333%
+ justify-content: space-around;
+ 
 
   }
 
@@ -421,10 +426,7 @@ h3{
 
   }
   
-  footer{
-    flex-direction: row;
-    
-  }
+  
 
 
 }
